confict error fix v2 home button home button only visible of current page is not dashboard

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -777,3 +777,28 @@ ul {
 .not-visible {
 	display: none;
 }
+
+#homeButton:link, #homeButton:visited { 
+  color: inherit;
+  text-decoration: none;
+  cursor: auto;
+  text-shadow: 1px 1px 3px rgba(20, 20, 20, 1);
+	-webkit-text-stroke-width: 0.5px;
+	-webkit-text-stroke-color: #ccc;
+
+}
+
+#homeButton:link:active, #homeButton:visited:active { 
+  color:inherit;
+  text-shadow: 1px 1px 3px rgba(20, 20, 20, 1);
+	-webkit-text-stroke-width: 0.5px;
+	-webkit-text-stroke-color: #ccc;
+}
+
+#homeButton:link:hover, #homeButton:visited:hover {
+	color: #333;
+	cursor: pointer;
+	text-shadow: 1px 1px 3px rgba(20, 20, 20, 1);
+	-webkit-text-stroke-width: 0.5px;
+	-webkit-text-stroke-color: #ccc;
+}
